--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "webapp",
+  "name": "wpr",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
+    "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.4"
+    "mysql2": "^3.6.3"
   }
 }
