fix problem with create table from the dbsetup.js

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DBUSER=wpr
-DBPASSWORD=fit2023
-DATABASE=wpr2023
-HOST=127.0.0.1
+DBUSER="wpr"
+DBPASSWORD="fit2023"
+DATABASE="wpr2023"
+HOST="localhost"
 PORT=3306
